# React-Wasm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  makem.js  package.json
source/: debug.cpp  main.cpp
source/libraries/opencv/build_js/: CMakeCache.txt  CMakeDownloadLog.txt  CMakeVars.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  OpenCVConfig.cmake  OpenCVGenPkgConfig.info.cmake  OpenCVModules.cmake  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt  opencv_data_config.hpp  opencv_python_config.cmake  opencv_python_tests.cfg
source/libraries/opencv/build_js/data/: CTestTestfile.cmake  Makefile  cmake_install.cmake
source/libraries/opencv/build_js/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
source/libraries/opencv/build_js/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
source/libraries/opencv/build_js/modules/calib3d/: CTestTestfile.cmake  Makefile  cmake_install.cmake  undistort.simd_declarations.hpp
source/libraries/opencv/build_js/modules/core/: CTestTestfile.cmake  Makefile  arithm.simd_declarations.hpp  cmake_install.cmake  convert.simd_declarations.hpp  convert_scale.simd_declarations.hpp  count_non_zero.simd_declarations.hpp  has_non_zero.simd_declarations.hpp  (+8 more)
source/libraries/opencv/build_js/samples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
source/libraries/opencv/build_js/unix-install/: opencv4.pc
web/: .eslintignore  package.json
web/src/: App.tsx
web/src/components/: VideoBackground.tsx
web/src/wasm/: em_testing.min.js  test_lib.wasm
(+87 files in other folders)
